--- a/heading.css
+++ b/heading.css
@@ -1,5 +1,16 @@
 h1, h2 {
     color:white;
     background: black;
-    padding: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+    margin: 10px;
+    border-top: 5px solid #00308F;
+    border-bottom: 5px solid #00308F;
+    border-left: 5px solid #00308F;
+    border-right: 5px solid #00308F;
+    
+
 }
