--- a/paragraph.css
+++ b/paragraph.css
@@ -1,1 +1,9 @@
-p { color:blue}
+p {font-family: "Consolas", Vetica, serif; color:white;
+    font-size: 40px;
+    left: 0;
+    line-height: 200px;
+    margin: auto;
+    margin-top: -100px;
+    position: absolute;
+    top: 50%;
+    width: 100%;}
