--- a/paragraph.css
+++ b/paragraph.css
@@ -1,4 +1,4 @@
-p {font-family: "Consolas", Vetica, serif; color:white;
+p {font-family: "consolas", serif; color:white;
     font-size: 40px;
     left: 0;
     line-height: 200px;
