New Website Design

--- a/style.css
+++ b/style.css
@@ -16,25 +16,10 @@
   margin-left: -100px;
 }
 
-.typed-cursor{
-    display: inline;
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-}
-@keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-webkit-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-moz-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
+.middle{
+    position: fixed;
+    top: 5%;
+    left: 43%;
+    margin-top: auto;
+    margin-left: auto;
 }
